--- a/src/App.css
+++ b/src/App.css
@@ -1,108 +1,108 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+ul.taskList {
+	padding: 0 25px;
 }
 
-body {
-  padding: 50px;
-  color: #f7f7f7;
-  min-height: 100vh;
-  background: #252525;
-  text-rendering: optimizeSpeed;
-  font-family: "Roboto", sans-serif;
+li.task {
+	list-style-type: none;
+	font-family: Tahoma;
+	font-size: 1.2em;
+	padding: 10px 0;
+	border-bottom: 1px solid #ccc;
 }
 
-.App {
-  padding: 1rem;
-  max-width: 50%;
-  margin: 0 auto;
-  text-align: center;
-  background: #333;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;
+li.task:hover .deleteTaskBtn {
+	visibility: visible;
+	opacity: 1;
 }
 
-h1 {
-  font-weight: 300;
-  color: #44c0b6;
-  font-size: 2.5rem;
-  letter-spacing: 0.2rem;
-  text-transform: uppercase;
+input.taskCheckbox {
+	position: relative;
+	float: left;
+	margin-right: 10px;
+	-webkit-appearance: none;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	outline: none;
+	margin-left: 5px;
+	text-align: center;
+	cursor: pointer;
+	font-weight: bold;
 }
 
-.input-wrapper {
-  margin: 3.5rem;
+input.taskCheckbox:checked:after {
+	color: green;
+	content: "\2713";
+	display: block;
+	font-size: 17px;
+	height: 17px;
+	position: absolute;
+	width: 17px;
+	left: 0.5px;
+	bottom: 2px;
 }
 
-.todos-wrapper {
-  margin-bottom: 2.5rem;
+input.taskCheckbox + label.taskLabel {
+	color: black;
 }
 
-.todo {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+input.taskCheckbox:checked + label.taskLabel {
+	text-decoration: line-through;
+	color: #656565;
 }
 
-input {
-  width: 450px;
-  padding: 0.8em;
+input[placeholder] {
+	font-size: 1.1em;
 }
 
-input:focus {
-  outline: none;
+.container {
+	width: 40%;
+	height: 400px;
+	position: relative;
+	margin: 0 auto;
+	border-radius: 5px;
 }
 
-button {
-  width: 120px;
-  padding: 0.8em;
-  cursor: pointer;
-  font-weight: 400;
-  letter-spacing: 0.1rem;
+.header {
+	color: black;
+	padding: 5px;
+	text-align: center;
+	font-family: Tahoma, sans-serif;
 }
 
-input,
-button {
-  font-size: 1em;
-  appearance: none;
-  color: currentcolor;
-  background: transparent;
-  border: 1px solid #828691;
+.inputContainer {
+	padding: 15px;
 }
 
-.add-button {
-  color: #44c0b6;
-  border-left: none;
+.inputContainer .taskInput {
+	padding: 10px;
+	width: 100%;
+	border-radius: 25px;
+	box-sizing: border-box;
 }
 
-.delete-button {
-  color: #fe6a6a;
+.listWrapper {
+	position: absolute;
+	bottom: 50px;
+	top: 160px;
+	right: 0;
+	left: 0;
+	overflow: auto;
 }
 
-ul {
-  padding: 0;
-  list-style: none;
-  margin-bottom: 0px;
-}
-
-li {
-  width: 450px;
-  padding: 0.85em;
-  text-align: left;
-  margin-bottom: 0.5rem;
-  background: #494847;
-  letter-spacing: 0.02rem;
-  transition: all 0.3s ease-out;
-  border-left: 5px solid #cf972e;
-}
-
-li:last-child {
-  margin-bottom: 0px;
-}
-
-.empty {
-  font-size: 20px;
-  font-weight: 400;
-  color: #cf972e;
-  letter-spacing: 0.2rem;
+.deleteTaskBtn {
+	float: right;
+	color: red;
+	background: rgba(0,0,0,0);
+	font-size: 20px;
+	font-weight: bold;
+	border: 1px solid white;
+	border-radius: 50%;
+	padding: 10px 5px;
+	visibility: hidden;
+	opacity: 0;
+	line-height: 0;
+	margin-right: 5px;
+	cursor: default;
 }
